content-zone/mega-menu fixed underline spacing black-friday

--- a/content-zone/mega-menu/css/styles.less
+++ b/content-zone/mega-menu/css/styles.less
@@ -38,7 +38,7 @@
 						text-transform: none !important;
 						font-family: 'gilroy-regular' !important;
 						text-align: left !important;
-						padding: 10px 0 !important;
+						padding: 4px 0 !important;
 
 						&:hover {
 							// font-family: gilroy-bold !important;
